Increment version to 1.8.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ios-deploy",
-  "version": "1.8.4",
+  "version": "1.8.5",
   "os": [
     "darwin"
   ],
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "preinstall": "./src/scripts/check_reqs.js && xcodebuild",
-    "test": "npm run pycompile && npm run jshint && xcodebuild -scheme ios-deploy-lib && xcodebuild test -scheme ios-deploy-tests",
+    "test": "npm run pycompile && npm run jshint && xcodebuild -target ios-deploy-lib && xcodebuild test -scheme ios-deploy-tests",
     "jshint": "node node_modules/jshint/bin/jshint src/scripts/*.js",
     "pycompile": "python -m py_compile src/scripts/*.py"
   },
