--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://github.com/phonegap/ios-deploy"
   },
   "devDependencies": {
-  	"jshint": "2.5.8"
+  	"jshint": "2.5.8",
+	"semver": "*"
   },
   "scripts": {
     "preinstall": "./src/scripts/check_reqs.js && xcodebuild",
