--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "type": "git",
     "url": "https://github.com/ios-control/ios-deploy"
   },
+  "bundledDependencies": [ 
+    "semver"
+  ],
   "devDependencies": {
-	"semver": "*"
+	  "semver": "*",
     "eslint": "~4.19.1",
     "eslint-config-semistandard": "^12.0.1",
     "eslint-config-standard": "^11.0.0",
